The runtime was created by the additional compile. but memory leak occur in this commit.
  [New Features]
    * The runtime was created by the additional compile.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.989024 2023-07-14
+  [New Features]
+    * The runtime was created by the additional compile.
 0.989023 2023-07-12
   [New Features]
     * The following native APIs were added.
