--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.989024 2023-07-14
   [New Features]
     * The runtime was created by the additional compile.
+  [Incompatibe Changes]
+    * The DESTROY method in the Runtime class was removed.
 0.989023 2023-07-12
   [New Features]
     * The following native APIs were added.
