Hash value set operator can be used for tha class that has set method.
  [New Features]
    * Hash value set operator can be used for tha class that has set method.
    * Hash value get operator can be used for tha class that has get method.

--- a/Changes
+++ b/Changes
@@ -21,6 +21,8 @@
     * array length operator @ can be used for the class that has Countable interface.
     * Array element set operator can be used for tha class that has set method.
     * Array element get operator can be used for tha class that has get method.
+    * Hash value set operator can be used for tha class that has set method.
+    * Hash value get operator can be used for tha class that has get method.
     
   [Internal Changes]
     * Rename SPVM_OP_C_ID_ELEMENT_ACCESS to SPVM_OP_C_ID_ARRAY_ELEMENT_ACCESS.
