--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.990096 2025-10-02
   [Document Improvement]
     * Add links to new standard modules.
+    * Add links to CPAN modules.
     
 0.990095 2025-10-01
   [Changes with Performance Degradation]
