--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.990097 2025-10-03
   [Internal Changes with Memory Size Degradation]
     * Add capacity member variable to spvm_object.h.
+    * Add data member variable to spvm_object.h.
     
     
 0.990096 2025-10-02
