Remove internale object_length_offset argument of internal functions.

--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
     * Add capacity member variable to spvm_object.h.
     * Add data member variable to spvm_object.h.
     * get_object_data_offset returns offsetof(SPVM_OBJECT, data).
+    * Remove internale object_data_offset argument of internal functions.
+    * Remove internale object_length_offset argument of internal functions.
     
 0.990096 2025-10-02
   [Document Improvement]
