--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.990100 2025-10-08
+  [Changes]
+    * Allow same named local variable declartions as arguments.
+      static method foo : void ($var : int) {
+        my $var = 2;
+      }
+      
 0.990099 2025-10-06
   [Design Changes]
     * string and array becomes dynamic string and array. The capacity and length can be shorten and extended.
