ShortList class use array length and array capacity instead of fields.
  [New Features]
    * Add ShortList#new_ref method.

  [Changes with Incompatible Change Posibility]
    * ShortList class use array length and array capacity instead of fields.

--- a/Changes
+++ b/Changes
@@ -1,10 +1,12 @@
 0.990101 2025-10-09
   [New Features]
     * Add ByteList#new_ref method.
+    * Add ShortList#new_ref method.
     * Add IntList#new_ref method.
     
   [Changes with Incompatible Change Posibility]
     * ByteList class use array length and array capacity instead of fields.
+    * ShortList class use array length and array capacity instead of fields.
     * IntList class use array length and array capacity instead of fields.
     
 0.990100 2025-10-09
