--- a/Changes
+++ b/Changes
@@ -4,12 +4,13 @@
     * Add ShortList#new_ref method.
     * Add IntList#new_ref method.
     * Add LongList#new_ref method.
+    * Add DoubleList#new_ref method.
     
   [Changes with Incompatible Change Posibility]
     * ByteList class use array length and array capacity instead of fields.
     * ShortList class use array length and array capacity instead of fields.
     * IntList class use array length and array capacity instead of fields.
-    * LongList class use array length and array capacity instead of fields.
+    * DoubleList class use array length and array capacity instead of fields.
     
 0.990100 2025-10-09
   [Changes]
