Add StringList#new_ref method.

--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
     * Add FloatList#new_ref method.
     * Add DoubleList#new_ref method.
     * Add List#new_ref method.
+    * Add StringList#new_ref method.
     * Add ByteList#get_array method.
     * Add ShortList#get_array method.
     * Add IntList#get_array method.
