The exception message in object to numeric conversion is simplified.

--- a/Changes
+++ b/Changes
@@ -14,7 +14,8 @@
     * Fn#UINT16_MAX method returns short type instead of int.
   [Internal Change with Incompatible Change Posibility]
     * Simplify Hash#get_byte, get_short, get_int, get_long, get_float, get_double, get_string logic.
-    
+  [Exception Message Changes]
+    * The exception message in object to numeric conversion is simplified.
 0.990101 2025-10-09
   [New Features]
     * Add ByteList#new_ref method.
