set_field_byte native API can receive any numeric value.
  [Changes]
    * set_field_byte native API can receive any numeric value.
    * set_field_short native API can receive any numeric value.
    * set_field_int native API can receive any numeric value.
    * set_field_long native API can receive any numeric value.
    * set_field_float native API can receive any numeric value.
    * set_field_double native API can receive any numeric value.

--- a/Changes
+++ b/Changes
@@ -23,6 +23,12 @@
     * get_field_long native API can access any numeric type field.
     * get_field_float native API can access any numeric type field.
     * get_field_double native API can access any numeric type field.
+    * set_field_byte native API can receive any numeric value.
+    * set_field_short native API can receive any numeric value.
+    * set_field_int native API can receive any numeric value.
+    * set_field_long native API can receive any numeric value.
+    * set_field_float native API can receive any numeric value.
+    * set_field_double native API can receive any numeric value.
     
 0.990101 2025-10-09
   [New Features]
