--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
     * Fix a bug that compile_type_name operator causes segfault in some cases.
   [Changes]
     * compile_type_name operator returns a generic type.
+    * is_compile_type operator matches if the right type matches partially the type of the operand from the top.
+    
 0.990104 2025-10-15
   [New Features]
     * Add element[] type for generics.
