The right type of is_compile_type operator must not contain union types.
  [Compilation Error Changes]
    * The right type of is_compile_type operator must not contain union types.

--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
     * is_compile_type operator matches if the right type matches partially the type of the operand from the top.
   [Compilation Error Changes]
     * Duplicated mutable type modifier causes a compilation error.
+    * The right type of is_compile_type operator must not contain union types.
     
 0.990104 2025-10-15
   [New Features]
