--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.990106 2025-11-07
+  [Changes]
+    * Any object to numeric converion returns 0 if the object is undef.
+    
 0.990105 2025-10-16
   [Bug Fix]
     * Fix a bug that compile_type_name operator causes segfault in some cases.
